<resources>
    <string name="app_name">El ratón se viste a la moda</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_mis_compras">Mis Compras</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_cerrarSession">Cerrar Sesion</string>
    <string name="ingNom_Registrar">Ingrese su nombre:</string>
    <string name="ingApe_Registrar">Ingrese su apellido:</string>
    <string name="ingEmail_Registrar">Ingrese su email:</string>
    <string name="ingContrasenna_Registrar">Ingrese su contraseña:</string>
    <string name="btnRegresar_Registrar">Regresar</string>
    <string name="btnInsertar">Insertar</string>
    <string name="res">Resumen de compra:</string>
    <item name="CorreoListAdapter" type="id" />
    <item name="IDListAdapter" type="id" />
    <string name="btnModificar" type="id">Modificar</string>
</resources>