<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_Mis_Compras"
            android:icon="@drawable/ic_baseline_shopping_bag_24"
            android:title="@string/menu_mis_compras" />
        <item
            android:id="@+id/nav_Contacto"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_contacto" />
    </group>
</menu>